load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["utils.go"],
    importpath = "github.com/rai-project/libkv/testutils",
    visibility = ["//visibility:public"],
    deps = [
        "//store:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
