load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["boltdb.go"],
    importpath = "github.com/c3sr/libkv/store/boltdb",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//store:go_default_library",
        "//vendor/github.com/boltdb/bolt:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["boltdb_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//:go_default_library",
        "//store:go_default_library",
        "//testutils:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
