load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["mock.go"],
    importpath = "github.com/rai-project/libkv/store/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//store:go_default_library",
        "//vendor/github.com/stretchr/testify/mock:go_default_library",
    ],
)
